--- a/index.html
+++ b/index.html
@@ -5,32 +5,57 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Check iframe sbol</title>
 		<script type="text/javascript">
+			window.addEventListener("message", function(message) {
+				if (!message.data) {
+					return;
+				}
+				try {
+					var data = JSON.parse(message.data);
+				} catch (e) {
+					return;
+				}
+				var arguments = data.data;
+
+				if (data.type === "sberPayRedirect") {
+					console.log(arguments);
+					console.log(window.location);
+					var links = [
+			            arguments.redirectUrl, 
+			            arguments.redirectUrl.replace("sberpay","sbolpay"), 
+			            arguments.redirectUrl.replace("sberpay://","btripsexpenses://sbolpay/")
+			        ];
+			        var linksParam = encodeURIComponent(JSON.stringify(links));
+			        var paymentPage = encodeURIComponent(window.location.href);
+			        window.location.href =
+			            message.origin +
+			            "/media/sbol_opener/sbol_opener.html?links=" +
+			            linksParam +
+			            "&paymentPage=" +
+			            paymentPage
+				}
+			});
+		</script>
+		<script type="text/javascript">
 			function go() {
 				var button = document.getElementById("button");
 				var url = document.getElementById("input");
-				var form = document.getElementById("form");
+				var frame = document.getElementById("frame");
 				button.addEventListener("click", function() {
-					form.setAttribute("action", url.value);
-					form.submit();
+					frame.setAttribute("src", url.value);
 				});
 			}
 		</script>
 	</head>
 	<body>
-		<form method="get" target="iframe" id="form" onsubmit="go(); return false">
-			<input type="text" id="input" />
-			<button type="submit" id="button">Просмотр</button>
-		</form>
-		<div className="frame_container">
-			<iframe
-				name="iframe"
-				seamless="seamless"
-				width="100%"
-				height="450"
-				frameborder="0"
-				title="iframe"
-			/>
-		</div>
-
+		<input type="text" id="input" />
+		<button type="button" id="button" onclick="go()">Просмотр</button>
+		<iframe
+			id="frame"
+			name="iframe"
+			width="100%"
+			height="450"
+			frameborder="0"
+			title="iframe"
+		/>
 	</body>
 </html>
