change to stage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Check iframe sbol</title>
-		<script src="https://test.egopay.ru/paymedia/js/pg-additional-1.0.js"></script>
+		<script src="https://sandbox.egopay.ru/media/js/pg-additional-1.0.min.js"></script>
 		<script type="text/javascript">
 			function go() {
 				var button = document.getElementById("button");
